[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra-ml"
version = "0.1.0"
description = "ASTRA — Adaptive System for Traffic Response & Analytics: ML Training Pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    # Data layer
    "polars>=1.0,<2.0",
    "duckdb>=1.0,<2.0",
    "pyarrow>=17.0",
    # Classical ML
    "scikit-learn>=1.5,<2.0",
    "lightgbm>=4.0,<5.0",
    "catboost>=1.2,<2.0",
    "scikit-survival>=0.23,<1.0",
    "imbalanced-learn>=0.12,<1.0",
    # Experiment tracking & tuning
    "mlflow>=2.15,<3.0",
    "optuna>=3.6,<4.0",
    "optuna-integration>=3.6,<4.0",
    # Config management
    "hydra-core>=1.3,<2.0",
    "omegaconf>=2.3,<3.0",
    # Utilities
    "numpy>=1.26,<3.0",
    # API server
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "networkx>=3.6.1",
]

[project.optional-dependencies]
deep = [
    # Deep learning / multimodal
    "torch>=2.2,<3.0",
    "transformers>=4.40,<5.0",
    "peft>=0.11,<1.0",
    # Graph neural networks
    "torch-geometric>=2.5,<3.0",
    # Road graph construction
    "osmnx>=1.9,<2.0",
    "networkx>=3.2,<4.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/astra_ml --cov-report=term-missing -v"
